--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -82,6 +82,14 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="15dp">
 
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp" />
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
