--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,6 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/Backround"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_main"
     tools:context="edu.pottytrackercsumb.pottytracker.MainActivity">
@@ -15,27 +16,18 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:gravity="center_horizontal"
         android:id="@+id/linearLayout3">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Potty Tracker"
-            android:id="@+id/helloUser"
-            android:textSize="40dp"
-            android:textStyle="bold|italic"
-            android:gravity="center"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="v1.0"
             android:id="@+id/textView" />
+
     </LinearLayout>
+
 
     <LinearLayout
         android:orientation="vertical"
@@ -43,32 +35,42 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:id="@+id/linearLayout2"
-        android:layout_below="@+id/linearLayout3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="30dp">
+        android:padding="10dip"
+        android:background="@drawable/border"
+        android:layout_alignLeft="@+id/helloUser"
+        android:layout_alignStart="@+id/helloUser"
+        android:layout_below="@+id/helloUser"
+        android:layout_alignRight="@+id/helloUser"
+        android:layout_alignEnd="@+id/helloUser"
+        android:layout_marginTop="70dp">
+
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/username"
             android:layout_gravity="center_horizontal"
-            android:hint="Enter Username"
-            android:textSize="30dp"
+            android:gravity="center"
+            android:hint="Username"
+            android:textSize="17.5dp"
+            android:textColorHint="@color/Gray"
             android:minWidth="300dp"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            android:background="@android:color/white" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/password"
-            android:layout_gravity="center_horizontal"
-            android:hint="Enter Password"
-            android:textSize="30dp"
+            android:hint=" Password"
+            android:textSize="17.5dp"
+            android:gravity="center"
+            android:textColorHint="@color/Gray"
             android:layout_marginTop="20dp"
             android:minWidth="300dp"
             android:password="false"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            android:background="@android:color/white" />
     </LinearLayout>
 
     <LinearLayout
@@ -80,15 +82,16 @@
         android:layout_below="@+id/linearLayout2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="80dp">
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_below="@+id/linearLayout3"
+            android:layout_centerHorizontal="true" />
+
 
         <Button
             android:layout_width="wrap_content"
@@ -98,7 +101,8 @@
             android:layout_gravity="center_horizontal"
             android:minWidth="175dp"
             android:textStyle="italic"
-            android:minHeight="40dp" />
+            android:minHeight="40dp"
+            android:layout_marginTop="15dp" />
 
         <Button
             android:layout_width="wrap_content"
@@ -111,16 +115,22 @@
             android:textStyle="italic"
             android:minHeight="40dp" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Find Bathroom Now"
-            android:id="@+id/findBathroomBttn"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="15dp"
-            android:minWidth="175dp"
-            android:textStyle="italic"
-            android:minHeight="45dp" />
     </LinearLayout>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Potty Tracker"
+        android:id="@+id/helloUser"
+        android:textSize="40dp"
+        android:textStyle="bold|italic"
+        android:gravity="center"
+        android:textColor="@color/GhostWhite"
+        android:layout_alignBottom="@+id/linearLayout3"
+        android:layout_centerHorizontal="true" />
+
+
 
 </RelativeLayout>
