--- a/app/src/main/res/layout/content_create_account.xml
+++ b/app/src/main/res/layout/content_create_account.xml
@@ -6,6 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/Backround"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_create"
     tools:context="edu.pottytrackercsumb.pottytracker.CreateAccount"
@@ -14,6 +15,8 @@
 
     <TextView
         android:text="First Name"
+        android:textSize="20dp"
+        android:textColor="@color/GhostWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp" />
@@ -21,33 +24,45 @@
     <EditText
         android:id="@+id/firstName"
         android:layout_width="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_height="wrap_content" />
+        android:layout_marginBottom="15dp"
+        android:layout_height="wrap_content"
+        android:textColorHint="@color/Gray"
+        android:background="@android:color/white"/>
 
     <TextView
         android:text="Last Name"
+        android:textSize="20dp"
+        android:textColor="@color/GhostWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <EditText
         android:id="@+id/lastName"
         android:layout_width="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_height="wrap_content" />
+        android:layout_marginBottom="15dp"
+        android:layout_height="wrap_content"
+        android:textColorHint="@color/Gray"
+        android:background="@android:color/white"/>
 
     <TextView
         android:text="Username"
+        android:textSize="20dp"
+        android:textColor="@color/GhostWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <EditText
         android:id="@+id/username"
         android:layout_width="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_height="wrap_content" />
+        android:layout_marginBottom="15dp"
+        android:layout_height="wrap_content"
+        android:textColorHint="@color/Gray"
+        android:background="@android:color/white"/>
 
     <TextView
         android:text="Password"
+        android:textSize="20dp"
+        android:textColor="@color/GhostWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -55,10 +70,14 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:inputType="textPassword"
-        android:layout_marginBottom="10dp"
-        android:layout_height="wrap_content" />
+        android:layout_marginBottom="15dp"
+        android:layout_height="wrap_content"
+        android:textColorHint="@color/Gray"
+        android:background="@android:color/white"/>
     <TextView
         android:text="Confirm Password"
+        android:textColor="@color/GhostWhite"
+        android:textSize="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -66,8 +85,10 @@
         android:id="@+id/rePassword"
         android:layout_width="match_parent"
         android:inputType="textPassword"
-        android:layout_marginBottom="10dp"
-        android:layout_height="wrap_content" />
+        android:layout_marginBottom="15dp"
+        android:layout_height="wrap_content"
+        android:textColorHint="@color/Gray"
+        android:background="@android:color/white"/>
 
 
 
@@ -76,13 +97,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:gravity="center_horizontal">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Create"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/GhostWhite"
             android:id="@+id/createBttn"
             android:layout_marginRight="20dp"
             android:minWidth="100dp"
@@ -92,6 +115,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/GhostWhite"
             android:id="@+id/cancelButton"
             android:minWidth="100dp"
             android:textStyle="italic" />
