--- a/app/src/main/res/layout/content_splash_screen.xml
+++ b/app/src/main/res/layout/content_splash_screen.xml
@@ -6,6 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:backgroundTint="@color/Backround"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_splash_screen"
     tools:context="edu.pottytrackercsumb.pottytracker.SplashScreen"
@@ -28,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Version 1.0"
+        android:text="Version 2.0"
         android:id="@+id/textView14"
         android:textColor="#ffffff"
         android:textSize="20dp"
