--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#9DA0A3</color>
     <color name="colorAccent">#000000</color>
     <color name ="button">#C9CACB</color>
-    <color name ="background">#D8ECFF</color>
+    <color name ="background">#F8F8FF</color>
     <color name="GhostWhite">#F8F8FF</color>
     <color name="MintCream">#F5FFFA</color>
     <color name="WhiteSmoke">#F5F5F5</color>
