--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:startColor="#fbffff"
-        android:centerColor="#4992ff"
-        android:endColor="#0468d4"
+        android:startColor="#27AAE8"
+        android:centerColor="#27AAE8"
+        android:endColor="#27AAE8"
         android:type="linear"
-        android:angle="135"/>
+        android:angle="135" />
+
 </shape>
