--- a/app/src/main/res/layout/content_find_bathroom.xml
+++ b/app/src/main/res/layout/content_find_bathroom.xml
@@ -8,8 +8,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_find_bathroom"
-    tools:context="edu.pottytrackercsumb.pottytracker.FindBathroom">
+    tools:showIn="@layout/app_bar_find"
+    tools:context="edu.pottytrackercsumb.pottytracker.FindBathroom"
+    android:background="@color/Backround">
 
     <fragment
         android:layout_width="fill_parent"
