--- a/app/src/main/res/layout/content_rate_bathroom.xml
+++ b/app/src/main/res/layout/content_rate_bathroom.xml
@@ -7,126 +7,150 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_rate_bathroom"
+
     tools:context="edu.pottytrackercsumb.pottytracker.RateBathroom"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
-        android:layout_gravity="center_horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Bathroom Location"
-            android:id="@+id/textView7" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/messageText"
-            android:layout_weight="1" />
-
-    </LinearLayout>
+    android:orientation="vertical"
+    android:background="@color/Backround">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp">
+        android:layout_marginBottom="25dp">
 
-        <TextView
+        <RadioGroup
+            android:layout_gravity="center"
+            android:id="@+id/radioRatings"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Rating"
-            android:id="@+id/textView8" />
+            android:layout_height="wrap_content">
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1 Star"
-            android:id="@+id/radioButton"
-            android:checked="true"
-            android:layout_marginTop="30dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Horrible"
+                android:id="@+id/textView2"
+                android:textSize="25dp"
+                android:textColor="@color/GhostWhite"/>
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2 Star"
-            android:id="@+id/radioButton2"
-            android:checked="false" />
+            <RadioButton
+                android:textColor="@color/GhostWhite"
+                android:layout_width="fill_parent"
+                android:layout_height="59dp"
+                android:id="@+id/radioButton"
+                android:checked="true"
+                android:text="1"
+                android:textSize="25dp"
+                android:textStyle="bold" />
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3 Star"
-            android:id="@+id/radioButton4"
-            android:checked="false" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Poor"
+                android:id="@+id/textView3"
+                android:textSize="25dp"
+                android:textColor="@color/GhostWhite"/>
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="4 Star"
-            android:id="@+id/radioButton5"
-            android:checked="false" />
+            <RadioButton
+                android:textColor="@color/GhostWhite"
+                android:layout_width="fill_parent"
+                android:layout_height="59dp"
+                android:id="@+id/radioButton2"
+                android:checked="false"
+                android:text="2"
+                android:textSize="25dp"
+                android:textStyle="bold" />
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5 Star"
-            android:id="@+id/radioButton3"
-            android:checked="false" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Satisfactory"
+                android:id="@+id/textView4"
+                android:textSize="25dp"
+                android:textColor="@color/GhostWhite"/>
 
+            <RadioButton
+                android:textColor="@color/GhostWhite"
+                android:layout_width="fill_parent"
+                android:layout_height="59dp"
+                android:id="@+id/radioButton3"
+                android:text="3"
+                android:checked="false"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Very Good"
+                android:id="@+id/textView5"
+                android:textSize="25dp"
+                android:textColor="@color/GhostWhite"/>
+
+            <RadioButton
+                android:textColor="@color/GhostWhite"
+                android:layout_width="fill_parent"
+                android:layout_height="59dp"
+                android:id="@+id/radioButton4"
+                android:text="4"
+                android:checked="false"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Excellent"
+                android:id="@+id/textView6"
+                android:textSize="25dp"
+                android:textColor="@color/GhostWhite"/>
+
+            <RadioButton
+                android:textColor="@color/GhostWhite"
+                android:layout_width="fill_parent"
+                android:layout_height="59dp"
+                android:id="@+id/radioButton5"
+                android:text="5"
+                android:checked="false"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+        </RadioGroup>
     </LinearLayout>
+
+
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Comments: "
-            android:id="@+id/textView9" />
-
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/comments" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp"
         android:gravity="center_horizontal">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Enter"
+            android:text="OK"
             android:id="@+id/enterBttn"
-            android:minWidth="100dp" />
+            android:minWidth="100dp"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/GhostWhite"
+            android:minHeight="50dp" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"
-            android:id="@+id/cancelBttn"
+            android:id="@+id/clearBttn"
             android:layout_marginLeft="30dp"
-            android:minWidth="100dp" />
+            android:minWidth="100dp"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/GhostWhite"
+            android:minHeight="50dp" />
     </LinearLayout>
 
 </LinearLayout>
