--- a/app/src/main/res/layout/content_splash_screen.xml
+++ b/app/src/main/res/layout/content_splash_screen.xml
@@ -21,9 +21,9 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="156dp"
-        android:textColor="#ffffff"
-        android:textSize="50dp"
-        android:textStyle="italic" />
+        android:textColor="@color/GhostWhite"
+        android:textSize="60dp"
+        android:textStyle="bold|italic" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,8 +31,8 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Version 2.0"
         android:id="@+id/textView14"
-        android:textColor="#ffffff"
-        android:textSize="20dp"
+        android:textColor="@color/GhostWhite"
+        android:textSize="30dp"
         android:textStyle="italic"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
