--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -49,7 +49,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create New Bathroom"
+            android:text="Add New Bathroom"
             android:id="@+id/createBttn"
             android:background="@color/colorPrimary"
             android:layout_gravity="center_horizontal"
