--- a/app/src/main/res/layout/content_splash_screen.xml
+++ b/app/src/main/res/layout/content_splash_screen.xml
@@ -20,9 +20,9 @@
         android:id="@+id/textView10"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="156dp"
+        android:layout_marginTop="185dp"
         android:textColor="@color/GhostWhite"
-        android:textSize="60dp"
+        android:textSize="50dp"
         android:textStyle="bold|italic" />
 
     <TextView
@@ -34,6 +34,7 @@
         android:textColor="@color/GhostWhite"
         android:textSize="30dp"
         android:textStyle="italic"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/textView10"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp" />
 </RelativeLayout>
