--- a/app/src/main/res/menu/bathroom_page_drawer.xml
+++ b/app/src/main/res/menu/bathroom_page_drawer.xml
@@ -6,7 +6,7 @@
         <item android:id="@+id/find_bathroom"
             android:title="Find Bathroom" />
         <item android:id="@+id/update_bathroom"
-            android:title="Update Bathroom" />
+            android:title="Add Bathroom" />
         <item android:id="@+id/create"
             android:title="Create Account" />
         <item android:id="@+id/login"
