--- a/app/src/main/res/menu/bathroom_page_drawer2.xml
+++ b/app/src/main/res/menu/bathroom_page_drawer2.xml
@@ -7,7 +7,7 @@
         <item android:id="@+id/find_bathroom"
             android:title="Find Bathroom" />
         <item android:id="@+id/update_bathroom"
-            android:title="Update Bathroom" />
+            android:title="Add Bathroom" />
         <item android:id="@+id/your_rating"
             android:title="Your Ratings" />
         <item android:id="@+id/logout"
