--- a/app/src/main/res/menu/find_drawer.xml
+++ b/app/src/main/res/menu/find_drawer.xml
@@ -5,7 +5,7 @@
         <item android:id="@+id/home"
             android:title="Home" />
         <item android:id="@+id/update_bathroom"
-            android:title="Update Bathroom" />
+            android:title="Add Bathroom" />
         <item android:id="@+id/your_rating"
             android:title="Your Ratings" />
         <item android:id="@+id/logout"
