--- a/app/src/main/res/layout/content_create_account.xml
+++ b/app/src/main/res/layout/content_create_account.xml
@@ -15,96 +15,95 @@
 
     <TextView
         android:text="First Name"
-        android:textSize="20dp"
+        android:textSize="@dimen/standardTextSize"
         android:textColor="@color/GhostWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="5dp" />
+        android:layout_marginTop="@dimen/standardPadding2"
+        android:layout_marginBottom="@dimen/smallPadding" />
 
     <EditText
         android:id="@+id/firstName"
         android:layout_width="match_parent"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="@dimen/standardPadding"
         android:layout_height="wrap_content"
         android:textColorHint="@color/Gray"
         android:background="@android:color/white"
-        android:minHeight="35dp"
+        android:minHeight="@dimen/textBoxHeight"
         android:singleLine="true" />
 
     <TextView
         android:text="Last Name"
-        android:textSize="20dp"
+        android:textSize="@dimen/standardTextSize"
         android:textColor="@color/GhostWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp" />
+        android:layout_marginBottom="@dimen/smallPadding" />
 
     <EditText
         android:id="@+id/lastName"
         android:layout_width="match_parent"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="@dimen/standardPadding"
         android:layout_height="wrap_content"
         android:textColorHint="@color/Gray"
         android:background="@android:color/white"
-        android:minHeight="35dp"
+        android:minHeight="@dimen/textBoxHeight"
         android:singleLine="true" />
 
     <TextView
         android:text="Username"
-        android:textSize="22dp"
+        android:textSize="@dimen/standardTextSize"
         android:textColor="@color/GhostWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp" />
+        android:layout_marginBottom="@dimen/smallPadding" />
 
     <EditText
         android:id="@+id/username"
         android:layout_width="match_parent"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="@dimen/standardPadding"
         android:layout_height="wrap_content"
         android:textColorHint="@color/Gray"
         android:background="@android:color/white"
-        android:minHeight="35dp"
+        android:minHeight="@dimen/textBoxHeight"
         android:singleLine="true" />
 
     <TextView
         android:text="Password"
-        android:textSize="20dp"
+        android:textSize="@dimen/standardTextSize"
         android:textColor="@color/GhostWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp" />
+        android:layout_marginBottom="@dimen/smallPadding" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:inputType="textPassword"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="@dimen/standardPadding"
         android:layout_height="wrap_content"
         android:textColorHint="@color/Gray"
         android:background="@android:color/white"
-        android:minHeight="35dp"
+        android:minHeight="@dimen/textBoxHeight"
         android:singleLine="true" />
     <TextView
         android:text="Confirm Password"
         android:textColor="@color/GhostWhite"
-        android:textSize="20dp"
+        android:textSize="@dimen/standardTextSize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp" />
+        android:layout_marginBottom="@dimen/smallPadding" />
 
     <EditText
         android:id="@+id/rePassword"
         android:layout_width="match_parent"
         android:inputType="textPassword"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="@dimen/standardPadding"
         android:layout_height="wrap_content"
         android:textColorHint="@color/Gray"
         android:background="@android:color/white"
-        android:minHeight="35dp"
+        android:minHeight="@dimen/textBoxHeight"
         android:singleLine="true" />
-
 
 
     <LinearLayout
@@ -112,7 +111,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="@dimen/standardPadding"
         android:gravity="center_horizontal">
 
         <Button
@@ -123,8 +122,9 @@
             android:textColor="@color/GhostWhite"
             android:id="@+id/createBttn"
             android:layout_marginRight="20dp"
-            android:minWidth="100dp"
-            android:textStyle="italic" />
+            android:minWidth="@dimen/medButtonWidth"
+            android:textStyle="italic"
+            android:minHeight="@dimen/medButtonHeight"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -133,8 +133,9 @@
             android:background="@color/colorPrimary"
             android:textColor="@color/GhostWhite"
             android:id="@+id/cancelButton"
-            android:minWidth="100dp"
-            android:textStyle="italic" />
+            android:minWidth="@dimen/medButtonWidth"
+            android:textStyle="italic"
+            android:minHeight="@dimen/medButtonHeight"/>
     </LinearLayout>
 
 </LinearLayout>
