--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent"
+    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@color/Backround"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_home_page"
-    tools:context="edu.pottytrackercsumb.pottytracker.HomePage">
+    tools:context="edu.pottytrackercsumb.pottytracker.HomePage"
+    android:orientation="vertical">
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,19 +19,19 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Hello"
         android:id="@+id/helloUser"
-        android:textSize="35dp"
+        android:textSize="@dimen/homeText"
         android:textStyle="italic"
         android:gravity="center"
         android:textColor="@color/GhostWhite"
-        android:layout_marginBottom="40dp"
         android:layout_above="@+id/linearLayout"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="223dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_height="@dimen/linlayHeight"
         android:id="@+id/linearLayout"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
@@ -43,8 +45,10 @@
             android:layout_gravity="center_horizontal"
             android:background="@color/colorPrimary"
             android:textColor="@color/GhostWhite"
-            android:minWidth="175dp"
-            android:textStyle="italic" />
+            android:minWidth="@dimen/largeButtonWidth"
+            android:minHeight="@dimen/largeButtonHeight"
+            android:textStyle="italic"
+            android:layout_marginTop="30dp" />
 
         <Button
             android:layout_width="wrap_content"
@@ -54,9 +58,10 @@
             android:background="@color/colorPrimary"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/GhostWhite"
-            android:layout_marginTop="20dp"
-            android:minWidth="175dp"
-            android:textStyle="italic" />
+            android:layout_marginTop="@dimen/buttonPadding"
+            android:minWidth="@dimen/largeButtonWidth"
+            android:textStyle="italic"
+            android:minHeight="@dimen/largeButtonHeight"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -66,9 +71,21 @@
             android:background="@color/colorPrimary"
             android:textColor="@color/GhostWhite"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:minWidth="175dp"
-            android:textStyle="italic" />
+            android:layout_marginTop="@dimen/buttonPadding"
+            android:minWidth="@dimen/largeButtonWidth"
+            android:textStyle="italic"
+            android:minHeight="@dimen/largeButtonHeight"/>
     </LinearLayout>
 
-</RelativeLayout>
+    <ImageView
+        android:layout_width="@dimen/imageWidth"
+        android:layout_height="@dimen/imageHeight"
+        android:layout_marginTop="@dimen/BathPaddingTop"
+        android:id="@+id/imageView2"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/potty"
+        android:minWidth="@dimen/imageWidth"
+        android:minHeight="@dimen/imageHeight"
+        />
+
+</LinearLayout>
