--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,7 +17,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="@dimen/xLargePadding"
         android:gravity="center_horizontal"
         android:id="@+id/linearLayout3">
 
@@ -44,8 +44,7 @@
         android:layout_below="@+id/helloUser"
         android:layout_alignRight="@+id/helloUser"
         android:layout_alignEnd="@+id/helloUser"
-        android:layout_marginTop="20dp"
-        >
+        android:layout_marginTop="@dimen/standardPadding">
 
 
         <EditText
@@ -58,9 +57,10 @@
             android:textSize="17.5dp"
             android:textColorHint="@color/Gray"
             android:minWidth="300dp"
-            android:minHeight="35dp"
+            android:minHeight="@dimen/standardTextBoxSize"
             android:textStyle="italic"
-            android:background="@android:color/white" />
+            android:background="@android:color/white"
+            android:singleLine="true" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -72,22 +72,23 @@
             android:layout_marginTop="20dp"
             android:minWidth="300dp"
             android:password="false"
-            android:minHeight="35dp"
+            android:minHeight="@dimen/standardTextBoxSize"
             android:textStyle="italic"
             android:textColorHint="@color/Gray"
-            android:background="@android:color/white" />
+            android:background="@android:color/white"
+            android:singleLine="true" />
     </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="223dp"
+        android:layout_height="250dp"
         android:layout_gravity="center_horizontal"
         android:id="@+id/linearLayout4"
         android:layout_below="@+id/linearLayout2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="@dimen/largePadding">
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
@@ -95,7 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/linearLayout3"
-            android:minWidth="175dp"
+            android:minWidth="@dimen/largeButtonWidth"
             android:layout_centerHorizontal="true" />
 
 
@@ -107,10 +108,10 @@
             android:background="@color/colorPrimary"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/GhostWhite"
-            android:minWidth="175dp"
+            android:minWidth="@dimen/largeButtonWidth"
             android:textStyle="italic"
-            android:minHeight="40dp"
-            android:layout_marginTop="15dp" />
+            android:minHeight="@dimen/largeButtonHeight"
+            android:layout_marginTop="@dimen/standardPadding" />
 
         <Button
             android:layout_width="wrap_content"
@@ -120,10 +121,10 @@
             android:id="@+id/createAccountBttn"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/GhostWhite"
-            android:layout_marginTop="15dp"
-            android:minWidth="175dp"
+            android:layout_marginTop="@dimen/standardPadding"
+            android:minWidth="@dimen/largeButtonWidth"
             android:textStyle="italic"
-            android:minHeight="40dp" />
+            android:minHeight="@dimen/largeButtonHeight" />
 
     </LinearLayout>
 
@@ -134,13 +135,13 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Potty Tracker"
         android:id="@+id/helloUser"
-        android:textSize="43dp"
+        android:textSize="@dimen/homeText"
         android:textStyle="bold|italic"
         android:gravity="center"
         android:textColor="@color/GhostWhite"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="@dimen/largePadding" />
 
 
 
