--- a/app/src/main/res/layout/content_rate_bathroom.xml
+++ b/app/src/main/res/layout/content_rate_bathroom.xml
@@ -12,6 +12,7 @@
     android:orientation="vertical"
     android:background="@color/Backround">
 
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -31,17 +32,17 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Horrible"
                 android:id="@+id/textView2"
-                android:textSize="25dp"
+                android:textSize="@dimen/standardTextSize"
                 android:textColor="@color/GhostWhite"/>
 
             <RadioButton
                 android:textColor="@color/GhostWhite"
                 android:layout_width="fill_parent"
-                android:layout_height="59dp"
+                android:layout_height="@dimen/radioHeight"
                 android:id="@+id/radioButton"
                 android:checked="true"
                 android:text="1"
-                android:textSize="25dp"
+                android:textSize="@dimen/standardTextSize"
                 android:textStyle="bold" />
 
             <TextView
@@ -50,17 +51,17 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Poor"
                 android:id="@+id/textView3"
-                android:textSize="25dp"
+                android:textSize="@dimen/standardTextSize"
                 android:textColor="@color/GhostWhite"/>
 
             <RadioButton
                 android:textColor="@color/GhostWhite"
                 android:layout_width="fill_parent"
-                android:layout_height="59dp"
+                android:layout_height="@dimen/radioHeight"
                 android:id="@+id/radioButton2"
                 android:checked="false"
                 android:text="2"
-                android:textSize="25dp"
+                android:textSize="@dimen/standardTextSize"
                 android:textStyle="bold" />
 
             <TextView
@@ -69,17 +70,17 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Satisfactory"
                 android:id="@+id/textView4"
-                android:textSize="25dp"
+                android:textSize="@dimen/standardTextSize"
                 android:textColor="@color/GhostWhite"/>
 
             <RadioButton
                 android:textColor="@color/GhostWhite"
                 android:layout_width="fill_parent"
-                android:layout_height="59dp"
+                android:layout_height="@dimen/radioHeight"
                 android:id="@+id/radioButton3"
                 android:text="3"
                 android:checked="false"
-                android:textSize="25dp"
+                android:textSize="@dimen/standardTextSize"
                 android:textStyle="bold" />
 
             <TextView
@@ -88,17 +89,17 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Very Good"
                 android:id="@+id/textView5"
-                android:textSize="25dp"
+                android:textSize="@dimen/standardTextSize"
                 android:textColor="@color/GhostWhite"/>
 
             <RadioButton
                 android:textColor="@color/GhostWhite"
                 android:layout_width="fill_parent"
-                android:layout_height="59dp"
+                android:layout_height="@dimen/radioHeight"
                 android:id="@+id/radioButton4"
                 android:text="4"
                 android:checked="false"
-                android:textSize="25dp"
+                android:textSize="@dimen/standardTextSize"
                 android:textStyle="bold" />
 
             <TextView
@@ -107,17 +108,17 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Excellent"
                 android:id="@+id/textView6"
-                android:textSize="25dp"
+                android:textSize="@dimen/standardTextSize"
                 android:textColor="@color/GhostWhite"/>
 
             <RadioButton
                 android:textColor="@color/GhostWhite"
                 android:layout_width="fill_parent"
-                android:layout_height="59dp"
+                android:layout_height="@dimen/radioHeight"
                 android:id="@+id/radioButton5"
                 android:text="5"
                 android:checked="false"
-                android:textSize="25dp"
+                android:textSize="@dimen/standardTextSize"
                 android:textStyle="bold" />
         </RadioGroup>
     </LinearLayout>
@@ -136,21 +137,11 @@
             android:layout_height="wrap_content"
             android:text="OK"
             android:id="@+id/enterBttn"
-            android:minWidth="100dp"
+            android:minWidth="@dimen/medButtonWidth"
             android:background="@color/colorPrimary"
             android:textColor="@color/GhostWhite"
-            android:minHeight="50dp" />
+            android:minHeight="@dimen/medButtonHeight" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:id="@+id/clearBttn"
-            android:layout_marginLeft="30dp"
-            android:minWidth="100dp"
-            android:background="@color/colorPrimary"
-            android:textColor="@color/GhostWhite"
-            android:minHeight="50dp" />
     </LinearLayout>
 
 </LinearLayout>
