--- a/app/src/main/res/layout/content_splash_screen.xml
+++ b/app/src/main/res/layout/content_splash_screen.xml
@@ -20,9 +20,9 @@
         android:id="@+id/textView10"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="185dp"
+        android:layout_marginTop="100dp"
         android:textColor="@color/GhostWhite"
-        android:textSize="50dp"
+        android:textSize="@dimen/largeTextSize"
         android:textStyle="bold|italic" />
 
     <TextView
@@ -32,9 +32,18 @@
         android:text="Version 2.0"
         android:id="@+id/textView14"
         android:textColor="@color/GhostWhite"
-        android:textSize="30dp"
+        android:textSize="@dimen/descTextSize"
         android:textStyle="italic"
         android:layout_below="@+id/textView10"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="700dp"
+        android:id="@+id/imageView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/pt"
+        android:layout_below="@+id/textView14"/>
 </RelativeLayout>
